--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 
    
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-    <script src="http://ajax.microsoft.com/ajax/jQuery/jquery-3.1.1.js" 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+    <script src="https://ajax.microsoft.com/ajax/jQuery/jquery-3.1.1.js" 
         type="text/javascript"></script>
 
 
